--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url();
+
 .chart {
     min-width: 250px;
     flex-grow: 1;
+}
+
+* {
+    font-family: "Poppins" !important
 }
